# fritz-homeautomation-rs

./: .dir-locals.el  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.org  flake.nix  justfile  rpi-sync.sh  run.sh
.cargo/: config
data/: lichterkette.txt  list.xml  schedule.txt  stats.xml
examples/: device_stats.rs  turn_on_off.rs
fritz-christmas-light-controller/: Cargo.toml
fritz-christmas-light-controller/src/: config.rs  duration.rs  error.rs  fritz_updater.rs  lib.rs  main.rs  timer.rs
fritzapi/: Cargo.toml  README.md
fritzapi/examples/: fritz_dect_2xx_reader.rs  high-rate-refresh.rs  turn-on.rs
fritzapi/src/: api.rs  client.rs  error.rs  fritz_xml.rs  lib.rs  stats.rs
fritzapi/src/devices/: device_impl.rs  fritz_dect_2xx.rs  mod.rs
fritzctrl/: Cargo.toml  README.md
fritzctrl/src/: config.rs  daylight.rs  list.rs  main.rs  parser.rs  schedule.rs  switch.rs  testing.rs.bak  testing2.rs.bak
fritzctrl/src/schedule/: action.rs  mod.rs  schedule.rs
src/: api.rs  daylight.rs  error.rs  fritz_xml.rs  lib.rs  main.rs  schedule.rs
src/devices/: mod.rs
