[package]
name = "fritz-homeautomation"
version = "0.1.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.4.0"
serde = {version = "1.0.117", features = ["derive"]}
reqwest = {version = "0.10.9", features = ["blocking"]}
md5 = "0.7.0"
regex = "1.4.2"
lazy_static = "1.4.0"
dotenv = "0.15.0"
