[package]
name = "fritz-homeautomation"
version = "0.1.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.4.0"
serde = {version = "1.0.117", features = ["derive"]}
reqwest = {version = "0.10.9", features = ["blocking"], default-features = false}
# reqwest = {version = "0.10.9", features = ["blocking", "native-tls"], default-features = false}
# reqwest = {version = "0.10.9", features = ["blocking", "rustls-tls"], default-features = false}
md5 = "0.7.0"
regex = "1.4.2"
lazy_static = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4.19"
timer = "0.2.0"
crossbeam-channel = "0.5.0"
notify = "4.0.15"
clap = "2.33.3"
# openssl = { version = "0.10", features = ["vendored"], default-features = false }

# [patch.crates-io]

[target.arm-unknown-linux-musleabi]
linker = "arm-linux-gnueabihf-ld"

[target.x86_64-linux-musleabi]
linker = "arm-linux-gnueabihf-ld"

[target.armv7-unknown-linux-musleabihf]
linker = "arm-linux-gnueabihf-ld"


[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-ld"

[target.armv7-unknown-linux-c]
linker = "arm-linux-gnueabihf-ld"
