[package]
name = "fritz-homeautomation"
version = "0.2.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2018"
description = "A utility for controlling AVM Fritz devices using the \"AVM Home Automation\" API (https://avm.de/fileadmin/user_upload/Global/Service/Schnittstellen/AHA-HTTP-Interface.pdf)."

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.13"
md5 = "0.7.0"
notify = "4.0.15"
regex = "1.4.2"
serde = {version = "1.0.120", features = ["derive"]}
serde-xml-rs = "0.4.0"
sunrise = "1.0.0"
timer = "0.2.0"
parse_duration = "2.1.0"

[dependencies.reqwest]
version = "0.11.0"
features = ["blocking", "rustls-tls"]
default-features = false

[target.'cfg(target_os = "macos")'.dependencies]
corelocation-rs = { git = "https://github.com/nthapaliya/corelocation-rs" }
