[package]
name = "fritz-christmas-light-controller"
version = "0.4.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2021"
keywords = ["avm", "fritz", "homeautomation", "smarthome"]
license = "MIT"
repository = "https://github.com/rksm/fritz-homeautomation-rs"
description = """
Command line utility for controlling AVM Fritz devices
"""

[dependencies]
anyhow = "1.0.47"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-intervals = "0.3.0"
clap = { version = "4", features = ["env", "derive"] }
dotenv = "0.15.0"
flume = "0.10.14"
fritzapi = { path = "../fritzapi" }
lazy_static = "1.4.0"
log = "0.4.13"
notify = "5.0.0"
parse_duration = "2.1.1"
prettytable-rs = "0.9.0"
regex = "1.5.4"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
sunrise = "1.0.0"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-forest = { version = "0.1.5", features = ["env-filter"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
