[package]
name = "fritzapi"
version = "0.4.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
documentation = "https://docs.rs/fritzapi"
edition = "2021"
keywords = ["avm", "fritz", "homeautomation", "smarthome"]
license = "MIT"
repository = "https://github.com/rksm/fritz-homeautomation-rs"
description = """
Library for interfacing with the \"AVM Home Automation\" API
"""

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tracing = "0.1.37"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
lazy_static = "1.4.0"
log = "0.4.13"
md5 = "0.7.0"
regex = "1.4.2"
serde-xml-rs = "0.6"
thiserror = "1.0.30"

[target.'cfg(not(target_family = "wasm"))'.dependencies.reqwest]
version = "0.11.6"
# features = ["blocking", "rustls-tls"]
features = ["blocking"]
default-features = false
