[package]
name = "fritzctrl"
version = "0.4.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2021"
keywords = ["avm", "fritz", "homeautomation", "smarthome"]
license = "MIT"
repository = "https://github.com/rksm/fritz-homeautomation-rs"
description = """
Command line utility for controlling AVM Fritz devices
"""

[dependencies]
anyhow = "1.0.47"
chrono = "0.4.19"
clap = { version = "4", features = ["env"] }
dotenv = "0.15.0"
fritzapi = { path = "../fritzapi" }
lazy_static = "1.4.0"
log = "0.4.13"
parse_duration = "2.1.1"
prettytable-rs = "0.9.0"
regex = "1.5.4"
sunrise = "1.0.0"
tracing = "0.1.37"
tracing-forest = { version = "0.1.5", features = ["env-filter"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
