[package]
name = "fritzctrl"
version = "0.4.1"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
Command line utility for controlling AVM Fritz devices
"""
keywords = ["avm", "fritz", "homeautomation", "smarthome"]
repository = "https://github.com/rksm/fritz-homeautomation-rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
clap = { version = "4", features = ["env"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.4.2"
sunrise = "1.0.0"
parse_duration = "2.1.0"
prettytable-rs = "0.10.0"
fritzapi = { path = "../fritzapi", version = "0.4" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
